	since it may be misleading.

	* slime.el: In minor-mode-alist for slime-popup-buffer-mode,
	run slime-modeline-string only if slime-mode isn't active, because
	slime-mode runs slime-modeline-string from minor-mode-alist too
	resulting in duplicate modeline strings.
	Reported by Leo Liu.

2010-03-03  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-inspector-history): New command.

2010-03-03  Helmut Eller  <heller@common-lisp.net>
	Don't try to bind keywords in inspector-eval.

	* swank.lisp (inspector-eval): For now, don't bind symbols which
	are constantp.  Maybe something better can be found later.

2010-03-03  Helmut Eller  <heller@common-lisp.net>

	Use @ instead of # to mark object in the inspect history.

	* swank.lisp (print-part-to-string): Use @.

2010-02-19  Helmut Eller  <heller@common-lisp.net>

	Make eval-in-frame display multiple values; not only the first.

	* swank.lisp (values-to-string): New macro.
	(eval-string-in-frame): Use it.

2010-02-18  Mark Harig <idirectscm@aim.com>

	The compiler warns about various stuff. Fix some of it.

	* slime.el (slime-add-local-hook): Remove support for Emacs 20.
	(sldb-recenter-region): Use forward-line; not next-line.

2010-02-17  Helmut Eller  <heller@common-lisp.net>

	Add a command to eval stuff in the inspector.

	* slime.el (slime-inspector-eval): New command.
	(slime-inspector-mode-map): Bind it to 'e'.
	* swank.lisp (inspector-eval): New function.
	* swank-backend.lisp (eval-context): New function.
	* swank-cmucl.lisp (eval-context): Implement it.

2010-02-17  Helmut Eller  <heller@common-lisp.net>

	Point-entered hooks in the xref buffer don't work so well.
	Use forward/backward commands instead.

	* slime.el (slime-xref-next-line, slime-xref-prev-line): New
	commands.
	(slime-xref-show-location): New aux function.
	(slime-xref-mode-map): Remap up/down to next/prev location
	commands.  Make SPC and RET do the same.

2010-02-17  Helmut Eller  <heller@common-lisp.net>

	Select the xref buffer.